--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = esp32dev
 framework = arduino
 lib_ldf_mode = deep
 lib_deps =
+	mobizt/Firebase ESP32 Client@^4.3.19
 	lennarthennigs/Button2@^2.2.4
 	https://github.com/tzapu/WiFiManager.git
 	https://github.com/Bodmer/TFT_eSPI.git
