--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,9 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_ldf_mode = deep
-lib_deps =
+lib_deps = 
 	mobizt/Firebase ESP32 Client@^4.3.19
 	lennarthennigs/Button2@^2.2.4
 	https://github.com/tzapu/WiFiManager.git
 	https://github.com/Bodmer/TFT_eSPI.git
+	adafruit/Adafruit NeoPixel@^1.11.0
